--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         goos: [ linux, darwin, windows ]
-        goarch: [ amd64, arm64 ]
+        goarch: [ amd64, arm64 arm32 ]
     steps:
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@v1.25
