--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goos: [ linux, darwin, windows ]
-        goarch: [ amd64, arm64 arm32 ]
+        goos: [ darwin, windows ]
+        goarch: [ amd64, arm64 ]
+        goos_linux: [ linux, android ]
+        goarch_linux: [ amd64, arm64, arm, i386 ]
     steps:
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@v1.25
@@ -20,6 +22,16 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
+          goversion: "https://dl.google.com/go/go1.17.8.linux-amd64.tar.gz"
+          project_path: "."
+          binary_name: "android-ota-extractor"
+          ldflags: "-s -w"
+          md5sum: false
+          sha256sum: true
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: ${{ matrix.goos_linux }}
+          goarch: ${{ matrix.goarch_linux }}
           goversion: "https://dl.google.com/go/go1.17.8.linux-amd64.tar.gz"
           project_path: "."
           binary_name: "android-ota-extractor"
