--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,8 @@ jobs:
       matrix:
         goos: [ darwin, windows ]
         goarch: [ amd64, arm64 ]
-        goos_linux: [ linux, android ]
-        goarch_linux: [ amd64, arm64, arm, i386 ]
+        gooslinux: [ linux, android ]
+        goarchlinux: [ amd64, arm64, arm, i386 ]
     steps:
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@v1.25
@@ -29,11 +29,4 @@ jobs:
           md5sum: false
           sha256sum: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          goos: ${{ matrix.goos_linux }}
-          goarch: ${{ matrix.goarch_linux }}
-          goversion: "https://dl.google.com/go/go1.17.8.linux-amd64.tar.gz"
-          project_path: "."
-          binary_name: "android-ota-extractor"
-          ldflags: "-s -w"
-          md5sum: false
-          sha256sum: true
+          
