--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         goos: [ linux, android ]
-        goarch: [ amd64, arm64, arm, i386 ]
+        goarch: [ amd64, arm64, arm ]
     steps:
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@v1.25
